--- a/index.html
+++ b/index.html
@@ -9,6 +9,56 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        </nav>
+            <div class="container">
+                <div>
+                    <img src="storage/img/logo.png" alt="logo" class="logo" />
+                    <div class="menu"
+                        <ul>
+                            <li>
+                                <a href="#">new releases</a>
+                            </li>
+                            <li>
+                                <a href="#">men</a>
+                            </li>
+                            <li>
+                                <a href="#">women</a>
+                            </li>
+                            <li>
+                                <a href="#"kids</a>
+                            </li>
+                            <li>
+                                <a href="#">categories</a>
+                            </li>
+                        </ul>
+                        <form>
+                            <div class="search-icon">
+                                <i class="fas fas fa-search"></i>
+                            </div>
+                            <input
+                             type="text"
+                             class="search..."
+                            />
+                            <button class="nav-btn">
+                                <i class="fas fa-cart-plus"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <div class="menu-btn">
+                    <i class="fas fa-bars"></i>
+                </div>
+                
+                </div>
+                            </button>
+
+                                </a>
+                            </li>
+
+                            </li>
+                           
+    </header>
+    <h1>holi</h1>
 </body>
 </html>
