feat: :bug: corregi errores en la estructura, html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div>
                     <img src="storage/img/logo.png" alt="logo" class="logo" />
-                    <div class="menu"
+                    <div class="menu">
                         <ul>
                             <li>
                                 <a href="#">new releases</a>
@@ -26,7 +26,7 @@
                                 <a href="#">women</a>
                             </li>
                             <li>
-                                <a href="#"kids</a>
+                                <a href="#">kids</a>
                             </li>
                             <li>
                                 <a href="#">categories</a>
@@ -79,8 +79,8 @@
     <div class="footer">
         <div class="social">
           <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i "class=fab fa instagram"></i>i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a
+          <a href="#"><i class="fab fa instagram"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
         <div class="watch">
             <div class="play-icon">
@@ -89,11 +89,5 @@
             <h3>preview</h3>
         </div>
     </div>
-    </header>
     
-                </i></i>
-            </div>
-        </div>
-                
-    </header>
-   
+ 
