fix: :bug: ultima correccion

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        </nav>
+        <nav>
             <div class="container">
                 <div>
                     <img src="storage/img/logo.png" alt="logo" class="logo" />
@@ -36,10 +36,7 @@
                             <div class="search-icon">
                                 <i class="fas fas fa-search"></i>
                             </div>
-                            <input
-                             type="text"
-                             class="search..."
-                            />
+                            <input type="text" class="search" placeholder="search..."/>
                             <button class="nav-btn">
                                 <i class="fas fa-cart-plus"></i>
                             </button>
